--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -15,6 +15,11 @@
     <meta name="HandheldFriendly" content="true">
     {% include 'includes/og.html' %}
     {% include 'includes/favicon.html' %}
+    <link rel="preload" href="fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/SegoeUIBold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/SegoeUIItalic.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/SegoeUILight.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/SegoeUISemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" type="text/css" as="" href="styles/main.css">
     <noscript>
         <link rel="stylesheet" type="text/css" href="styles/main.css">
