--- a/src/templates/pages/ads-list.html
+++ b/src/templates/pages/ads-list.html
@@ -81,14 +81,14 @@
                     <div class="ads-list__item-content">
                         <div class="name">Подушки</div>
                         <div class="desc">Цена каждой подушки-250 руб. Подушки- наполнитель- пух-перо, размер 50*50-4 шт., 60*60 - 1 шт. двадцать четыре</div>
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                         <div class="info">
                             <div class="date">7 авг</div>
                             <div class="city">Уфа</div>
                         </div>
                     </div>
                     <div class="ads-list__item-price">
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                     </div>
                 </a>
             </div>
@@ -105,14 +105,14 @@
                     <div class="ads-list__item-content">
                         <div class="name">Подушки</div>
                         <div class="desc">Цена каждой подушки-250 руб. Подушки- наполнитель- пух-перо, размер 50*50-4 шт., 60*60 - 1 шт. двадцать четыре</div>
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                         <div class="info">
                             <div class="date">7 авг</div>
                             <div class="city">Уфа</div>
                         </div>
                     </div>
                     <div class="ads-list__item-price">
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                     </div>
                 </a>
             </div>
@@ -129,14 +129,14 @@
                     <div class="ads-list__item-content">
                         <div class="name">Подушки</div>
                         <div class="desc">Цена каждой подушки-250 руб. Подушки- наполнитель- пух-перо, размер 50*50-4 шт., 60*60 - 1 шт. двадцать четыре</div>
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                         <div class="info">
                             <div class="date">7 авг</div>
                             <div class="city">Уфа</div>
                         </div>
                     </div>
                     <div class="ads-list__item-price">
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                     </div>
                 </a>
             </div>
@@ -153,14 +153,14 @@
                     <div class="ads-list__item-content">
                         <div class="name">Подушки</div>
                         <div class="desc">Цена каждой подушки-250 руб. Подушки- наполнитель- пух-перо, размер 50*50-4 шт., 60*60 - 1 шт. двадцать четыреСтульчик - качели от 0 месяцев. После одного ребёнка. Использовался крайне редко тк по пол года живём на даче. В идеальном состоянии. Из самого страшного небольшие следы от ручки- на фото есть. Торг уместен.</div>
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                         <div class="info">
                             <div class="date">7 авг</div>
                             <div class="city">Уфа</div>
                         </div>
                     </div>
                     <div class="ads-list__item-price">
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                     </div>
                 </a>
             </div>
@@ -177,14 +177,14 @@
                     <div class="ads-list__item-content">
                         <div class="name">Магнитофон elektaМагнитофон elektaМагнитофон elektaelekta Магнитофон elekta Магнитофон elekta Магнитофон elekta</div>
                         <div class="desc">Цена каждой подушки-250 руб. Подушки- наполнитель- пух-перо, размер 50*50-4 шт., 60*60 - 1 шт. двадцать четыре</div>
-                        <div class="price"><b>250</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>250</b><span class="price__icon">&#8381;</span></div>
                         <div class="info">
                             <div class="date">7 авг</div>
                             <div class="city">Уфа</div>
                         </div>
                     </div>
                     <div class="ads-list__item-price">
-                        <div class="price"><b>7000</b><span class="price__icon">₽</span></div>
+                        <div class="price"><b>7000</b><span class="price__icon">&#8381;</span></div>
                     </div>
                 </a>
             </div>
