--- a/src/templates/pages/ads-user-ads.html
+++ b/src/templates/pages/ads-user-ads.html
@@ -39,7 +39,7 @@
                         </picture>
                         <div class="ads-user-item__content">
                             <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                            <div class="price"><b>7 000</b> ₽</div>
+                            <div class="price"><b>7 000</b> &#8381;</div>
                             <div class="info">
                                 <div class="date">30 дней осталось</div>
                                 <div class="city">Благовещенск</div>
@@ -59,7 +59,7 @@
                         </picture>
                         <div class="ads-user-item__content">
                             <div class="name">Стульчик - качели Tatamia</div>
-                            <div class="price">7 000 ₽</div>
+                            <div class="price">7 000 &#8381;</div>
                             <div class="info">
                                 <div class="date">7 авг</div>
                                 <div class="city">Уфа</div>
@@ -79,7 +79,7 @@
                         </picture>
                         <div class="ads-user-item__content">
                             <div class="name">Стульчик - качели Tatamia</div>
-                            <div class="price">7 000 ₽</div>
+                            <div class="price">7 000 &#8381;</div>
                             <div class="info">
                                 <div class="date">7 авг</div>
                                 <div class="city">Уфа</div>
@@ -99,7 +99,7 @@
                         </picture>
                         <div class="ads-user-item__content">
                             <div class="name">Стульчик - качели Tatamia</div>
-                            <div class="price">7 000 ₽</div>
+                            <div class="price">7 000 &#8381;</div>
                             <div class="info">
                                 <div class="date">7 авг</div>
                                 <div class="city">Уфа</div>
@@ -119,7 +119,7 @@
                         </picture>
                         <div class="ads-user-item__content">
                             <div class="name">Стульчик - качели Tatamia</div>
-                            <div class="price">7 000 ₽</div>
+                            <div class="price">7 000 &#8381;</div>
                             <div class="info">
                                 <div class="date">7 авг</div>
                                 <div class="city">Уфа</div>
