--- a/src/templates/pages/ads-user-myads.html
+++ b/src/templates/pages/ads-user-myads.html
@@ -38,7 +38,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
@@ -74,7 +74,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
@@ -110,7 +110,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
@@ -146,7 +146,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
@@ -182,7 +182,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
@@ -218,7 +218,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
@@ -254,7 +254,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
@@ -290,7 +290,7 @@
                             </picture>
                             <div class="ads-user-item__content">
                                 <div class="name">Стульчик - качели TatamiaСтульчик - качели Tatamia</div>
-                                <div class="price"><b>7 000</b> ₽</div>
+                                <div class="price"><b>7 000</b> &#8381;</div>
                                 <div class="info">
                                     <div class="date">30 дней осталось</div>
                                     <div class="city">Благовещенск</div>
