--- a/src/templates/pages/ads-user.html
+++ b/src/templates/pages/ads-user.html
@@ -30,7 +30,7 @@
         </div>
         <div class="col-12">
             <div class="price price--mob">
-                <b>500</b> ₽
+                <b>500</b> &#8381;
             </div>
         </div>
         <div class="col-lg-8">
@@ -47,7 +47,7 @@
         </div>
         <div class="col-lg-4">
             <div class="ads-user__detail">
-                <div class="price price--pc"><b>500</b> ₽</div>
+                <div class="price price--pc"><b>500</b> &#8381;</div>
                 <a href="tel:+79435431263" class="phone">+7 943 543 12 63</a>
                 <a href="mailto:erganom@gmail.com" class="email">erganom@gmail.com</a>
                 <a href="" class="people">
