--- a/src/blocks/modules/calendar/calendar.scss
+++ b/src/blocks/modules/calendar/calendar.scss
@@ -119,6 +119,7 @@
         @media (max-width: $media-sm) {
             border: none;
             padding-bottom: 12px;
+            flex-wrap: nowrap;
         }
         .calendar-date {
             height: auto;
@@ -129,146 +130,164 @@
     .calendar-body {
         color: $text-black;
         padding: 0;
-    }
 
-    .calendar-date {
-        display: flex;
-        flex-direction: column;
-        height: 136px;
-        border: 0;
-        padding: 0;
-        border-bottom: 1px solid $border-10;
-        border-right: 1px solid $border-10;
-        @media (max-width: $media-sm) {
-            width: 40px;
-            height: 40px;
-            border: none;
-            margin-bottom: 12px;
-            &:nth-last-child(-n+7) {
-                margin-bottom: 0;
-            }
-        }
-        @media (max-width: 413px) {
-            margin-bottom: 12px;
-            &:nth-last-child(-n+7) {
-                margin-bottom: 0;
-            }
-        }
-        @media (max-width: 383px) {
-            margin-bottom: 12px;
-            &:nth-last-child(-n+7) {
-                margin-bottom: 0;
-            }
-        }
-        @media (max-width: 360px) {
-            margin-bottom: 12px;
-            &:nth-last-child(-n+7) {
-                margin-bottom: 0;
-            }
-        }
-
-        .date-item {
-            box-sizing: border-box;
-            align-self: flex-end;
-            position: relative;
-            width: 32px;
-            height: 32px;
-            border: 1px solid transparent;
-            padding: .1rem;
-            appearance: none;
-            background: 0 0;
-            border-radius: 50%;
-            color: $text-black;
-            cursor: pointer;
-            font-size: rem(16);
-            line-height: 1.25;
-            outline: 0;
-            text-align: center;
-            text-decoration: none;
-            vertical-align: middle;
-            white-space: nowrap;
-            margin-right: 8px;
-            margin-top: 8px;
+        .calendar-date {
+            display: flex;
+            flex-direction: column;
+            height: 136px;
+            border: 0;
+            padding: 0;
+            border-bottom: 1px solid $border-10;
+            border-right: 1px solid $border-10;
             @media (max-width: $media-sm) {
-                width: 100%;
-                height: 100%;
-                margin: 0;
+                max-width: 56px;
+                height: 40px;
+                padding: 0 8px;
+                border: none;
+                margin-bottom: 12px;
+                margin-left: 0;
+                margin-right: 0;
+                &:nth-last-child(-n+7) {
+                    margin-bottom: 0;
+                }
+            }
+            @media (max-width: 413px) {
+                margin-bottom: 12px;
+                max-width: 52px;
+                padding: 0 6px;
+                margin-left: 0;
+                margin-right: 0;
+                &:nth-last-child(-n+7) {
+                    margin-bottom: 0;
+                }
+            }
+            @media (max-width: 383px) {
+                margin-bottom: 12px;
+                max-width: 48px;
+                padding: 0 4px;
+                margin-left: 0;
+                margin-right: 0;
+                &:nth-last-child(-n+7) {
+                    margin-bottom: 0;
+                }
+            }
+            @media (max-width: 360px) {
+                max-width: 42px;
+                height: 36px;
+                margin-bottom: 12px;
+                padding: 0 3px;
+                margin-left: 0;
+                margin-right: 0;
+                &:nth-last-child(-n+7) {
+                    margin-bottom: 0;
+                }
             }
 
-            &:focus {
-                border-color: rgba(246, 81, 69, 0.3);
-                color: $coral;
-            }
-
-            &.date-today {
-                border-color: $border-10;
+            .date-item {
+                box-sizing: border-box;
+                align-self: flex-end;
+                position: relative;
+                width: 32px;
+                height: 32px;
+                border: 1px solid transparent;
+                padding: .1rem;
+                appearance: none;
+                background: 0 0;
+                border-radius: 50%;
                 color: $text-black;
-            }
-            &:focus, &:hover {
-                border-color: rgba(246, 81, 69, 0.3);
-                border-width: 1px;
-                color: $coral;
+                cursor: pointer;
+                font-size: rem(16);
+                line-height: 1.25;
+                outline: 0;
+                text-align: center;
                 text-decoration: none;
-            }
-            &:active, &.active {
-                border: solid 3px rgba(246, 81, 69, 0.3)!important;
-                border-radius: 100%;
-                background: $white;
-                color: $text-black;
+                vertical-align: middle;
+                white-space: nowrap;
+                margin-right: 8px;
+                margin-top: 8px;
+                @media (max-width: $media-sm) {
+                    width: 100%;
+                    height: 100%;
+                    margin: 0;
+                }
+
+                &:focus {
+                    border-color: rgba(246, 81, 69, 0.3);
+                    color: $coral;
+                }
+
+                &.date-today {
+                    border-color: $border-10;
+                    color: $text-black;
+                }
+                &:focus, &:hover {
+                    border-color: rgba(246, 81, 69, 0.3);
+                    border-width: 1px;
+                    color: $coral;
+                    text-decoration: none;
+                }
+                &:active, &.active {
+                    border: solid 3px rgba(246, 81, 69, 0.3)!important;
+                    border-radius: 100%;
+                    background: $white;
+                    color: $text-black;
+                    &.badge {
+                        &:after {
+                            top: -5px;
+                            right: -5px;
+                            @media (max-width: $media-sm) {
+                                top: -2px;
+                                right: -2px;
+                            }
+                        }
+                    }
+                }
                 &.badge {
                     &:after {
-                        top: -5px;
-                        right: -5px;
+                        content: '';
+                        box-sizing: content-box;
+                        display: block;
+                        position: absolute;
+                        top: -3px;
+                        right: -3px;
+                        width: 8px;
+                        height: 8px;
+                        border: solid 2px #ffffff;
+                        transition: none;
+                        background-color: #f65145;
+                        border-radius: 100%;
                         @media (max-width: $media-sm) {
-                            top: -2px;
-                            right: -2px;
+                            top: 0;
+                            right: 0;
                         }
                     }
                 }
             }
-            &.badge {
-                &:after {
-                    content: '';
-                    box-sizing: content-box;
-                    display: block;
-                    position: absolute;
-                    top: -3px;
-                    right: -3px;
-                    width: 8px;
-                    height: 8px;
-                    border: solid 2px #ffffff;
-                    transition: none;
-                    background-color: #f65145;
-                    border-radius: 100%;
-                    @media (max-width: $media-sm) {
-                        top: 0;
-                        right: 0;
-                    }
+
+            .date-item, .calendar-event {
+                &:disabled, &.disabled {
+                    cursor: default;
+                    opacity: .25;
+                    pointer-events: none;
+                }
+            }
+            &:nth-child(7n) {
+                border-right: 0;
+            }
+
+            &:nth-last-child(-n+7) {
+                border-bottom: 0;
+            }
+
+            &.prev-month, &.next-month {
+                .date-item, .calendar-event__name {
+                    opacity: .25;
                 }
             }
         }
-
-        .date-item, .calendar-event {
-            &:disabled, &.disabled {
-                cursor: default;
-                opacity: .25;
-                pointer-events: none;
-            }
-        }
-        &:nth-child(7n) {
-            border-right: 0;
-        }
-
-        &:nth-last-child(-n+7) {
-            border-bottom: 0;
-        }
-
-        &.prev-month, &.next-month {
-            .date-item, .calendar-event__name {
-                opacity: .25;
-            }
-        }
     }
+
+
 
     .calendar-range {
         position: relative;
@@ -285,6 +304,11 @@
             left: 0;
             height: 32px;
             background: fade_out($coral, .9);
+            @media (max-width: $media-sm){
+                top: 0;
+                bottom: 0;
+                height: auto;
+            }
         }
 
         &.range-start {
@@ -488,6 +512,9 @@
     box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2);
     background-color: #ffffff;
     border-radius: 8px;
+    @media (max-width: $media-lg){
+        display: none;
+    }
     &:after {
         content: '';
         position: absolute;
