--- a/src/templates/pages/security.html
+++ b/src/templates/pages/security.html
@@ -309,7 +309,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade modal-gallery" id="practices-gallery" tabindex="-1" role="dialog" aria-labelledby="gallery_popup_Label" aria-hidden="true">
+<div class="modal fade modal-gallery practices-gallery" id="practices-gallery" tabindex="-1" role="dialog" aria-labelledby="gallery_popup_Label" aria-hidden="true">
     <div class="modal-dialog " role="document">
         <div class="modal-content">
             <div class="modal-gallery__controls">
@@ -339,32 +339,8 @@
                                         <div class="video__time">1:00</div>
                                     </div>
                                 </div>
-                                <div class="thumbs-slider__description ">
-                                    <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
-                                    <div class="like-item">
-                                        <i class="icon icon--like-gray"></i>
-                                        0
-                                    </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="video">
-                                    <div class="video__body">
-                                        <picture class="video__preview">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J7433.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J7433.jpg"   title="" alt="">
-                                        </picture>
-                                        <video class="video__player" controls preload="auto">
-                                            <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
-                                            <!--                                        для лучшей поддержки набо еще подгружать второй сорс в видео в формате webm-->
-                                            <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.webmhd.webm" type="video/webm">
-                                            Your browser does not support the video tag.
-                                        </video>
-                                        <div class="video__time">1:00</div>
-                                    </div>
+                                <div class="status-success js-status">
+                                    Молниеотвод выполнен в соответсвии с совеременными подходами к строительству
                                 </div>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -372,7 +348,15 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -382,13 +366,24 @@
                                     <!--[if IE 9]></video><![endif]-->
                                     <img src="img/AA5J6740-vertical.jpg"   title="" alt="">
                                 </picture>
+                                <div class="status-warning js-status">
+                                    Молниеотвод выполнен в соответсвии с совеременными подходами к строительству
+                                </div>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
                                     <div class="like-item">
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -404,7 +399,15 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -420,7 +423,15 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -436,7 +447,15 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -452,7 +471,15 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -468,7 +495,15 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -484,7 +519,15 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
@@ -500,13 +543,21 @@
                                         <i class="icon icon--like-gray"></i>
                                         0
                                     </div>
-                                    <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+                                    <div class="text">
+                                        <a href="#" class="people">
+                                            <div class="avatar">
+                                                <img src="img/avatar.jpg" alt="">
+                                            </div>
+                                            <div class="name">Константин Понтелеймонов</div>
+                                        </a>
+                                        <div class="card-date">9 фев</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-container thumbs-slider__nav js-thumbs-slider__nav js-thumbs-slider__nav--modal">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
+                                <div class="swiper-slide status-success">
                                     <picture class="video__preview">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J7433.webp" type="image/webp">
@@ -514,15 +565,7 @@
                                         <img src="img/AA5J7433.jpg"   title="" alt="">
                                     </picture>
                                 </div>
-                                <div class="swiper-slide">
-                                    <picture class="video__preview">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J7433.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J7433.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
+                                <div class="swiper-slide status-warning">
                                     <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
