--- a/src/blocks/modules/practices/practices__widget.scss
+++ b/src/blocks/modules/practices/practices__widget.scss
@@ -180,6 +180,7 @@
                 flex-direction: column;
                 .thumbs-slider__description {
                     border-bottom: 0;
+                    border-radius: 0;
                 }
             }
             .text {
@@ -240,7 +241,7 @@
                     order: 1;
                     position: static;
                     max-width: 100%;
-                    margin: 0 16px;
+                    margin: 0 16px 24px;
                     padding: 12px 12px 12px 36px;
                     border-radius: 5px;
                 }
@@ -278,7 +279,7 @@
                     order: 1;
                     position: static;
                     max-width: 100%;
-                    margin: 0 16px;
+                    margin: 0 16px 24px;
                     padding: 12px 12px 12px 36px;
                     border-radius: 5px;
                     @media (max-width: $media-sm) {
@@ -299,5 +300,13 @@
                 }
             }
         }
+    }
+
+    @media (max-width: $media-sm){
+        .comments{
+            border-top: 1px solid $border-10;
+            padding-top: 16px;
+        }
+
     }
 }
